update exceptions