@@ -1,4 +1,4 @@
-package org.ru.dictionary.service;
+package org.ru.dictionary.service.impl;
 
 import lombok.RequiredArgsConstructor;
 import org.ru.dictionary.dto.course.CourseRequestDTO;
@@ -6,11 +6,12 @@ import org.ru.dictionary.dto.course.CourseResponseDTO;
 import org.ru.dictionary.entity.Course;
 import org.ru.dictionary.entity.User;
 import org.ru.dictionary.enums.Authorities;
+import org.ru.dictionary.enums.BusinessErrorCodes;
+import org.ru.dictionary.exception.ApiException;
 import org.ru.dictionary.mapper.CourseMapper;
 import org.ru.dictionary.repository.CourseRepository;
 import org.ru.dictionary.repository.UserRepository;
-import org.springframework.data.elasticsearch.ResourceNotFoundException;
-import org.springframework.security.access.AccessDeniedException;
+import org.ru.dictionary.service.CourseService;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -22,29 +23,33 @@ import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-public class CourseServiceImpl {
+public class CourseServiceImpl implements CourseService {
 
     private final CourseRepository courseRepository;
     private final UserRepository userRepository;
     private final CourseMapper courseMapper;
 
-
     public void checkAuthorOrAdmin(Course course, UserDetails userDetails) {
-
         boolean isAuthor = course.getAuthor().getUsername().equals(userDetails.getUsername());
-
         boolean isAdmin = userDetails.getAuthorities().stream()
                 .anyMatch(auth -> auth.getAuthority().equals(Authorities.ROLE_ADMIN.name()));
 
         if (!isAuthor && !isAdmin) {
-            throw new AccessDeniedException("Access denied: you are not allowed to modify this course");
+            throw new ApiException(BusinessErrorCodes.COURSE_ACCESS_DENIED);
         }
+    }
+
+    public List<CourseResponseDTO> getAllCourses() {
+        return courseRepository.findAll().stream()
+                .map(courseMapper::toResponseDTO)
+                .collect(Collectors.toList());
     }
 
     @Transactional
     public CourseResponseDTO createCourse(CourseRequestDTO dto, UserDetails userDetails) {
         User author = userRepository.findByUsername(userDetails.getUsername())
-                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
+                .orElseThrow(() -> new ApiException(BusinessErrorCodes.USER_NOT_FOUND,
+                        "User not found: " + userDetails.getUsername()));
 
         Course course = courseMapper.toEntity(dto);
         course.setAuthor(author);
@@ -56,7 +61,8 @@ public class CourseServiceImpl {
     @Transactional
     public CourseResponseDTO updateCourse(Long courseId, CourseRequestDTO dto, UserDetails userDetails) {
         Course course = courseRepository.findById(courseId)
-                .orElseThrow(() -> new ResourceNotFoundException("Course not found"));
+                .orElseThrow(() -> new ApiException(BusinessErrorCodes.COURSE_NOT_FOUND,
+                        "Course ID: " + courseId));
 
         checkAuthorOrAdmin(course, userDetails);
 
@@ -66,26 +72,23 @@ public class CourseServiceImpl {
         return courseMapper.toResponseDTO(courseRepository.save(course));
     }
 
-    public List<CourseResponseDTO> getAllCourses() {
-        return courseRepository.findAll().stream()
-                .map(courseMapper::toResponseDTO)
-                .collect(Collectors.toList());
+    public List<CourseResponseDTO> getUserCourses(UserDetails userDetails) {
+        return userRepository.findByUsername(userDetails.getUsername())
+                .map(user -> courseRepository.findByParticipantsContaining(user)
+                        .stream()
+                        .map(courseMapper::toResponseDTO)
+                        .toList())
+                .orElse(Collections.emptyList());
     }
 
-    public List<CourseResponseDTO> getUserCourses(UserDetails userDetails) {
-        var user = userRepository.findByUsername(userDetails.getUsername());
-        return courseRepository.findByParticipantsContaining(user.get()).stream()
-                .map(courseMapper::toResponseDTO)
-                .collect(Collectors.toList());
-    }
 
     @Transactional
     public void deleteCourse(Long courseId, UserDetails userDetails) {
         Course course = courseRepository.findById(courseId)
-                .orElseThrow(() -> new ResourceNotFoundException("Course not found"));
+                .orElseThrow(() -> new ApiException(BusinessErrorCodes.COURSE_NOT_FOUND,
+                        "Course ID: " + courseId));
 
         checkAuthorOrAdmin(course, userDetails);
-
         courseRepository.delete(course);
     }
 
@@ -94,17 +97,20 @@ public class CourseServiceImpl {
 
         return participantIds.stream()
                 .map(id -> userRepository.findById(id)
-                        .orElseThrow(() -> new ResourceNotFoundException("User not found with id: " + id)))
+                        .orElseThrow(() -> new ApiException(BusinessErrorCodes.USER_NOT_FOUND,
+                                "User ID: " + id)))
                 .collect(Collectors.toSet());
     }
 
     @Transactional
     public void joinCourse(Long courseId, UserDetails userDetails) {
         Course course = courseRepository.findById(courseId)
-                .orElseThrow(() -> new ResourceNotFoundException("Course not found"));
+                .orElseThrow(() -> new ApiException(BusinessErrorCodes.COURSE_NOT_FOUND,
+                        "Course ID: " + courseId));
 
         User user = userRepository.findByUsername(userDetails.getUsername())
-                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
+                .orElseThrow(() -> new ApiException(BusinessErrorCodes.USER_NOT_FOUND,
+                        "User: " + userDetails.getUsername()));
 
         if (!course.getParticipants().contains(user)) {
             course.getParticipants().add(user);
